Fix for Pipeline history page -> In search cross icon mis-aligned #2960

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -19,7 +19,6 @@
 @import '../new_stylesheets/shared/common';
 
 @include foundation-grid;
-//@include foundation-typography;
 @include foundation-forms;
 
 %page-title {
@@ -49,7 +48,7 @@ ul {
   margin-left:  auto;
   margin-right: auto;
   @include clearfix;
-  @media only screen and (max-width: 1600px) {
+  @media only screen and (max-width:$max-breakpoint) {
     max-width: 100%;
   }
   @media only screen and (min-width: $max-breakpoint) {
@@ -1995,10 +1994,13 @@ a:link.help, a:visited.help {
 
 .label-filter-group {
   position: absolute;
-  top:      10px;
+  top:      7px;
   right:    10px;
   padding:  0;
   z-index:  $label-filter-group;
+  @media only screen and (min-width: $max-breakpoint) {
+   right:0;
+  }
 
   .filter-clear-icon {
     top: 11px;
